// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shows a dropdown of editor choices if user has not configured an editor 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TaskEditControl
    activateKeyboardShortcutGroup={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "openEditor": Object {
                "editId": Object {
                  "key": "e",
                  "label": Object {
                    "defaultMessage": "Edit in Id",
                    "id": "KeyMapping.openEditor.editId",
                  },
                },
                "editJosm": Object {
                  "key": "r",
                  "label": Object {
                    "defaultMessage": "Edit in JOSM",
                    "id": "KeyMapping.openEditor.editJosm",
                  },
                },
                "editJosmFeatures": Object {
                  "key": "y",
                  "label": Object {
                    "defaultMessage": "Edit just features in JOSM",
                    "id": "KeyMapping.openEditor.editJosmFeatures",
                  },
                },
                "editJosmLayer": Object {
                  "key": "t",
                  "label": Object {
                    "defaultMessage": "Edit in new JOSM layer",
                    "id": "KeyMapping.openEditor.editJosmLayer",
                  },
                },
                "editLevel0": Object {
                  "key": "v",
                  "label": Object {
                    "defaultMessage": "Edit in Level0",
                    "id": "KeyMapping.openEditor.editLevel0",
                  },
                },
              },
            },
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    deactivateKeyboardShortcutGroup={[MockFunction]}
    intl={
      Object {
        "formatMessage": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "defaultMessage": "None",
                "id": "Editor.none.label",
              },
            ],
            Array [
              Object {
                "defaultMessage": "Edit in iD (web editor)",
                "id": "Editor.id.label",
              },
            ],
            Array [
              Object {
                "defaultMessage": "Edit in JOSM",
                "id": "Editor.josm.label",
              },
            ],
            Array [
              Object {
                "defaultMessage": "Edit in new JOSM layer",
                "id": "Editor.josmLayer.label",
              },
            ],
            Array [
              Object {
                "defaultMessage": "Edit just features in JOSM",
                "id": "Editor.josmFeatures.label",
              },
            ],
            Array [
              Object {
                "defaultMessage": "Edit in Level0",
                "id": "Editor.level0.label",
              },
            ],
            Array [
              Object {
                "defaultMessage": "Edit",
                "id": "Task.controls.edit.tooltip",
              },
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": "None",
            },
            Object {
              "isThrow": false,
              "value": "Edit in iD (web editor)",
            },
            Object {
              "isThrow": false,
              "value": "Edit in JOSM",
            },
            Object {
              "isThrow": false,
              "value": "Edit in new JOSM layer",
            },
            Object {
              "isThrow": false,
              "value": "Edit just features in JOSM",
            },
            Object {
              "isThrow": false,
              "value": "Edit in Level0",
            },
            Object {
              "isThrow": false,
              "value": "Edit",
            },
          ],
        },
      }
    }
    keyboardShortcutGroups={
      Object {
        "layers": Object {
          "layerMapillary": Object {
            "key": "m",
            "label": Object {
              "defaultMessage": "Toggle Mapillary Layer",
              "id": "KeyMapping.layers.layerMapillary",
            },
          },
          "layerOSMData": Object {
            "key": "o",
            "label": Object {
              "defaultMessage": "Toggle OSM Data Layer",
              "id": "KeyMapping.layers.layerOSMData",
            },
          },
          "layerTaskFeatures": Object {
            "key": "s",
            "label": Object {
              "defaultMessage": "Toggle Features Layer",
              "id": "KeyMapping.layers.layerTaskFeatures",
            },
          },
        },
        "openEditor": Object {
          "editId": Object {
            "key": "e",
            "label": Object {
              "defaultMessage": "Edit in Id",
              "id": "KeyMapping.openEditor.editId",
            },
          },
          "editJosm": Object {
            "key": "r",
            "label": Object {
              "defaultMessage": "Edit in JOSM",
              "id": "KeyMapping.openEditor.editJosm",
            },
          },
          "editJosmFeatures": Object {
            "key": "y",
            "label": Object {
              "defaultMessage": "Edit just features in JOSM",
              "id": "KeyMapping.openEditor.editJosmFeatures",
            },
          },
          "editJosmLayer": Object {
            "key": "t",
            "label": Object {
              "defaultMessage": "Edit in new JOSM layer",
              "id": "KeyMapping.openEditor.editJosmLayer",
            },
          },
          "editLevel0": Object {
            "key": "v",
            "label": Object {
              "defaultMessage": "Edit in Level0",
              "id": "KeyMapping.openEditor.editLevel0",
            },
          },
        },
        "taskCompletion": Object {
          "alreadyFixed": Object {
            "key": "x",
            "label": Object {
              "defaultMessage": "Already fixed",
              "id": "KeyMapping.taskCompletion.alreadyFixed",
            },
          },
          "falsePositive": Object {
            "key": "q",
            "label": Object {
              "defaultMessage": "Not an Issue",
              "id": "KeyMapping.taskCompletion.falsePositive",
            },
          },
          "fixed": Object {
            "key": "f",
            "label": Object {
              "defaultMessage": "I fixed it!",
              "id": "KeyMapping.taskCompletion.fixed",
            },
          },
          "skip": Object {
            "key": "w",
            "label": Object {
              "defaultMessage": "Skip",
              "id": "KeyMapping.taskCompletion.skip",
            },
          },
          "tooHard": Object {
            "key": "d",
            "label": Object {
              "defaultMessage": "Too difficult / Couldn't see",
              "id": "KeyMapping.taskCompletion.tooHard",
            },
          },
        },
        "taskEditing": Object {
          "cancel": Object {
            "key": "Escape",
            "keyLabel": Object {
              "defaultMessage": "ESC",
              "id": "KeyMapping.taskEditing.escapeLabel",
            },
            "label": Object {
              "defaultMessage": "Cancel Editing",
              "id": "KeyMapping.taskEditing.cancel",
            },
          },
          "fitBounds": Object {
            "key": "0",
            "label": Object {
              "defaultMessage": "Fit Map to Task Features",
              "id": "KeyMapping.taskEditing.fitBounds",
            },
          },
        },
        "taskReview": Object {
          "nextTask": Object {
            "key": "l",
            "label": Object {
              "defaultMessage": "Next Task",
              "id": "KeyMapping.taskReview.nextTask",
            },
          },
          "prevTask": Object {
            "key": "h",
            "label": Object {
              "defaultMessage": "Previous Task",
              "id": "KeyMapping.taskReview.prevTask",
            },
          },
        },
      }
    }
    pickEditor={[MockFunction]}
    task={
      Object {
        "id": 123,
        "parent": Object {
          "id": 321,
        },
        "status": 0,
      }
    }
    textInputActive={[MockFunction]}
    user={
      Object {
        "id": 357,
        "isLoggedIn": true,
        "settings": Object {},
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <button
        className="button edit-control large-and-wide full-width"
      >
        <span
          className="control-icon"
        >
          <SvgSymbol
            sym="edit-icon"
            viewBox="0 0 20 20"
          />
        </span>
        <span
          className="control-label"
        >
          <FormattedMessage
            defaultMessage="Edit"
            id="Task.controls.edit.label"
            values={Object {}}
          />
        </span>
      </button>,
      "className": "editor-dropdown full-width",
      "eventTypes": Array [
        "mousedown",
        "touchstart",
      ],
      "excludeScrollbar": false,
      "onSelect": [MockFunction],
      "options": Array [
        Object {
          "key": 0,
          "text": "Edit in iD (web editor)",
          "value": 0,
        },
        Object {
          "key": 1,
          "text": "Edit in JOSM",
          "value": 1,
        },
        Object {
          "key": 2,
          "text": "Edit in new JOSM layer",
          "value": 2,
        },
        Object {
          "key": 4,
          "text": "Edit just features in JOSM",
          "value": 4,
        },
        Object {
          "key": 3,
          "text": "Edit in Level0",
          "value": 3,
        },
      ],
      "outsideClickIgnoreClass": "ignore-react-onclickoutside",
      "preventDefault": false,
      "stopPropagation": false,
      "tooltip": "Edit",
      "triggerClassName": "full-width",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="control-icon"
          >
            <SvgSymbol
              sym="edit-icon"
              viewBox="0 0 20 20"
            />
          </span>,
          <span
            className="control-label"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="Task.controls.edit.label"
              values={Object {}}
            />
          </span>,
        ],
        "className": "button edit-control large-and-wide full-width",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "control-icon",
          "nodeType": "host",
          "props": Object {
            "children": <SvgSymbol
              sym="edit-icon"
              viewBox="0 0 20 20"
            />,
            "className": "control-icon",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "sym": "edit-icon",
              "viewBox": "0 0 20 20",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
        Object {
          "instance": null,
          "key": "control-label",
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Edit"
              id="Task.controls.edit.label"
              values={Object {}}
            />,
            "className": "control-label",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Edit",
              "id": "Task.controls.edit.label",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
      ],
      "type": "button",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <button
          className="button edit-control large-and-wide full-width"
        >
          <span
            className="control-icon"
          >
            <SvgSymbol
              sym="edit-icon"
              viewBox="0 0 20 20"
            />
          </span>
          <span
            className="control-label"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="Task.controls.edit.label"
              values={Object {}}
            />
          </span>
        </button>,
        "className": "editor-dropdown full-width",
        "eventTypes": Array [
          "mousedown",
          "touchstart",
        ],
        "excludeScrollbar": false,
        "onSelect": [MockFunction],
        "options": Array [
          Object {
            "key": 0,
            "text": "Edit in iD (web editor)",
            "value": 0,
          },
          Object {
            "key": 1,
            "text": "Edit in JOSM",
            "value": 1,
          },
          Object {
            "key": 2,
            "text": "Edit in new JOSM layer",
            "value": 2,
          },
          Object {
            "key": 4,
            "text": "Edit just features in JOSM",
            "value": 4,
          },
          Object {
            "key": 3,
            "text": "Edit in Level0",
            "value": 3,
          },
        ],
        "outsideClickIgnoreClass": "ignore-react-onclickoutside",
        "preventDefault": false,
        "stopPropagation": false,
        "tooltip": "Edit",
        "triggerClassName": "full-width",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="control-icon"
            >
              <SvgSymbol
                sym="edit-icon"
                viewBox="0 0 20 20"
              />
            </span>,
            <span
              className="control-label"
            >
              <FormattedMessage
                defaultMessage="Edit"
                id="Task.controls.edit.label"
                values={Object {}}
              />
            </span>,
          ],
          "className": "button edit-control large-and-wide full-width",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "control-icon",
            "nodeType": "host",
            "props": Object {
              "children": <SvgSymbol
                sym="edit-icon"
                viewBox="0 0 20 20"
              />,
              "className": "control-icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "sym": "edit-icon",
                "viewBox": "0 0 20 20",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
          Object {
            "instance": null,
            "key": "control-label",
            "nodeType": "host",
            "props": Object {
              "children": <FormattedMessage
                defaultMessage="Edit"
                id="Task.controls.edit.label"
                values={Object {}}
              />,
              "className": "control-label",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultMessage": "Edit",
                "id": "Task.controls.edit.label",
                "values": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "button",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`shows an edit button for the user's configured editor 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TaskEditControl
    activateKeyboardShortcutGroup={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "openEditor": Object {
                "editId": Object {
                  "key": "e",
                  "label": Object {
                    "defaultMessage": "Edit in Id",
                    "id": "KeyMapping.openEditor.editId",
                  },
                },
                "editJosm": Object {
                  "key": "r",
                  "label": Object {
                    "defaultMessage": "Edit in JOSM",
                    "id": "KeyMapping.openEditor.editJosm",
                  },
                },
                "editJosmFeatures": Object {
                  "key": "y",
                  "label": Object {
                    "defaultMessage": "Edit just features in JOSM",
                    "id": "KeyMapping.openEditor.editJosmFeatures",
                  },
                },
                "editJosmLayer": Object {
                  "key": "t",
                  "label": Object {
                    "defaultMessage": "Edit in new JOSM layer",
                    "id": "KeyMapping.openEditor.editJosmLayer",
                  },
                },
                "editLevel0": Object {
                  "key": "v",
                  "label": Object {
                    "defaultMessage": "Edit in Level0",
                    "id": "KeyMapping.openEditor.editLevel0",
                  },
                },
              },
            },
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    deactivateKeyboardShortcutGroup={[MockFunction]}
    intl={
      Object {
        "formatMessage": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "defaultMessage": "Edit",
                "id": "Task.controls.edit.tooltip",
              },
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": "Edit",
            },
          ],
        },
      }
    }
    keyboardShortcutGroups={
      Object {
        "layers": Object {
          "layerMapillary": Object {
            "key": "m",
            "label": Object {
              "defaultMessage": "Toggle Mapillary Layer",
              "id": "KeyMapping.layers.layerMapillary",
            },
          },
          "layerOSMData": Object {
            "key": "o",
            "label": Object {
              "defaultMessage": "Toggle OSM Data Layer",
              "id": "KeyMapping.layers.layerOSMData",
            },
          },
          "layerTaskFeatures": Object {
            "key": "s",
            "label": Object {
              "defaultMessage": "Toggle Features Layer",
              "id": "KeyMapping.layers.layerTaskFeatures",
            },
          },
        },
        "openEditor": Object {
          "editId": Object {
            "key": "e",
            "label": Object {
              "defaultMessage": "Edit in Id",
              "id": "KeyMapping.openEditor.editId",
            },
          },
          "editJosm": Object {
            "key": "r",
            "label": Object {
              "defaultMessage": "Edit in JOSM",
              "id": "KeyMapping.openEditor.editJosm",
            },
          },
          "editJosmFeatures": Object {
            "key": "y",
            "label": Object {
              "defaultMessage": "Edit just features in JOSM",
              "id": "KeyMapping.openEditor.editJosmFeatures",
            },
          },
          "editJosmLayer": Object {
            "key": "t",
            "label": Object {
              "defaultMessage": "Edit in new JOSM layer",
              "id": "KeyMapping.openEditor.editJosmLayer",
            },
          },
          "editLevel0": Object {
            "key": "v",
            "label": Object {
              "defaultMessage": "Edit in Level0",
              "id": "KeyMapping.openEditor.editLevel0",
            },
          },
        },
        "taskCompletion": Object {
          "alreadyFixed": Object {
            "key": "x",
            "label": Object {
              "defaultMessage": "Already fixed",
              "id": "KeyMapping.taskCompletion.alreadyFixed",
            },
          },
          "falsePositive": Object {
            "key": "q",
            "label": Object {
              "defaultMessage": "Not an Issue",
              "id": "KeyMapping.taskCompletion.falsePositive",
            },
          },
          "fixed": Object {
            "key": "f",
            "label": Object {
              "defaultMessage": "I fixed it!",
              "id": "KeyMapping.taskCompletion.fixed",
            },
          },
          "skip": Object {
            "key": "w",
            "label": Object {
              "defaultMessage": "Skip",
              "id": "KeyMapping.taskCompletion.skip",
            },
          },
          "tooHard": Object {
            "key": "d",
            "label": Object {
              "defaultMessage": "Too difficult / Couldn't see",
              "id": "KeyMapping.taskCompletion.tooHard",
            },
          },
        },
        "taskEditing": Object {
          "cancel": Object {
            "key": "Escape",
            "keyLabel": Object {
              "defaultMessage": "ESC",
              "id": "KeyMapping.taskEditing.escapeLabel",
            },
            "label": Object {
              "defaultMessage": "Cancel Editing",
              "id": "KeyMapping.taskEditing.cancel",
            },
          },
          "fitBounds": Object {
            "key": "0",
            "label": Object {
              "defaultMessage": "Fit Map to Task Features",
              "id": "KeyMapping.taskEditing.fitBounds",
            },
          },
        },
        "taskReview": Object {
          "nextTask": Object {
            "key": "l",
            "label": Object {
              "defaultMessage": "Next Task",
              "id": "KeyMapping.taskReview.nextTask",
            },
          },
          "prevTask": Object {
            "key": "h",
            "label": Object {
              "defaultMessage": "Previous Task",
              "id": "KeyMapping.taskReview.prevTask",
            },
          },
        },
      }
    }
    pickEditor={[MockFunction]}
    task={
      Object {
        "id": 123,
        "parent": Object {
          "id": 321,
        },
        "status": 0,
      }
    }
    textInputActive={[MockFunction]}
    user={
      Object {
        "id": 357,
        "isLoggedIn": true,
        "settings": Object {
          "defaultEditor": 1,
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="control-icon"
        >
          <SvgSymbol
            sym="edit-icon"
            viewBox="0 0 20 20"
          />
        </span>,
        <span
          className="control-label"
        >
          <FormattedMessage
            defaultMessage="Edit"
            id="Task.controls.edit.label"
            values={Object {}}
          />
        </span>,
      ],
      "className": "button edit-control large-and-wide full-width",
      "onClick": [Function],
      "title": "Edit",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "control-icon",
        "nodeType": "host",
        "props": Object {
          "children": <SvgSymbol
            sym="edit-icon"
            viewBox="0 0 20 20"
          />,
          "className": "control-icon",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "sym": "edit-icon",
            "viewBox": "0 0 20 20",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "span",
      },
      Object {
        "instance": null,
        "key": "control-label",
        "nodeType": "host",
        "props": Object {
          "children": <FormattedMessage
            defaultMessage="Edit"
            id="Task.controls.edit.label"
            values={Object {}}
          />,
          "className": "control-label",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "defaultMessage": "Edit",
            "id": "Task.controls.edit.label",
            "values": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "span",
      },
    ],
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="control-icon"
          >
            <SvgSymbol
              sym="edit-icon"
              viewBox="0 0 20 20"
            />
          </span>,
          <span
            className="control-label"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="Task.controls.edit.label"
              values={Object {}}
            />
          </span>,
        ],
        "className": "button edit-control large-and-wide full-width",
        "onClick": [Function],
        "title": "Edit",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "control-icon",
          "nodeType": "host",
          "props": Object {
            "children": <SvgSymbol
              sym="edit-icon"
              viewBox="0 0 20 20"
            />,
            "className": "control-icon",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "sym": "edit-icon",
              "viewBox": "0 0 20 20",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
        Object {
          "instance": null,
          "key": "control-label",
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Edit"
              id="Task.controls.edit.label"
              values={Object {}}
            />,
            "className": "control-label",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Edit",
              "id": "Task.controls.edit.label",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
      ],
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`shows edit control 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TaskEditControl
    activateKeyboardShortcutGroup={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "openEditor": Object {
                "editId": Object {
                  "key": "e",
                  "label": Object {
                    "defaultMessage": "Edit in Id",
                    "id": "KeyMapping.openEditor.editId",
                  },
                },
                "editJosm": Object {
                  "key": "r",
                  "label": Object {
                    "defaultMessage": "Edit in JOSM",
                    "id": "KeyMapping.openEditor.editJosm",
                  },
                },
                "editJosmFeatures": Object {
                  "key": "y",
                  "label": Object {
                    "defaultMessage": "Edit just features in JOSM",
                    "id": "KeyMapping.openEditor.editJosmFeatures",
                  },
                },
                "editJosmLayer": Object {
                  "key": "t",
                  "label": Object {
                    "defaultMessage": "Edit in new JOSM layer",
                    "id": "KeyMapping.openEditor.editJosmLayer",
                  },
                },
                "editLevel0": Object {
                  "key": "v",
                  "label": Object {
                    "defaultMessage": "Edit in Level0",
                    "id": "KeyMapping.openEditor.editLevel0",
                  },
                },
              },
            },
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    deactivateKeyboardShortcutGroup={[MockFunction]}
    intl={
      Object {
        "formatMessage": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "defaultMessage": "Edit",
                "id": "Task.controls.edit.tooltip",
              },
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": "Edit",
            },
          ],
        },
      }
    }
    keyboardShortcutGroups={
      Object {
        "layers": Object {
          "layerMapillary": Object {
            "key": "m",
            "label": Object {
              "defaultMessage": "Toggle Mapillary Layer",
              "id": "KeyMapping.layers.layerMapillary",
            },
          },
          "layerOSMData": Object {
            "key": "o",
            "label": Object {
              "defaultMessage": "Toggle OSM Data Layer",
              "id": "KeyMapping.layers.layerOSMData",
            },
          },
          "layerTaskFeatures": Object {
            "key": "s",
            "label": Object {
              "defaultMessage": "Toggle Features Layer",
              "id": "KeyMapping.layers.layerTaskFeatures",
            },
          },
        },
        "openEditor": Object {
          "editId": Object {
            "key": "e",
            "label": Object {
              "defaultMessage": "Edit in Id",
              "id": "KeyMapping.openEditor.editId",
            },
          },
          "editJosm": Object {
            "key": "r",
            "label": Object {
              "defaultMessage": "Edit in JOSM",
              "id": "KeyMapping.openEditor.editJosm",
            },
          },
          "editJosmFeatures": Object {
            "key": "y",
            "label": Object {
              "defaultMessage": "Edit just features in JOSM",
              "id": "KeyMapping.openEditor.editJosmFeatures",
            },
          },
          "editJosmLayer": Object {
            "key": "t",
            "label": Object {
              "defaultMessage": "Edit in new JOSM layer",
              "id": "KeyMapping.openEditor.editJosmLayer",
            },
          },
          "editLevel0": Object {
            "key": "v",
            "label": Object {
              "defaultMessage": "Edit in Level0",
              "id": "KeyMapping.openEditor.editLevel0",
            },
          },
        },
        "taskCompletion": Object {
          "alreadyFixed": Object {
            "key": "x",
            "label": Object {
              "defaultMessage": "Already fixed",
              "id": "KeyMapping.taskCompletion.alreadyFixed",
            },
          },
          "falsePositive": Object {
            "key": "q",
            "label": Object {
              "defaultMessage": "Not an Issue",
              "id": "KeyMapping.taskCompletion.falsePositive",
            },
          },
          "fixed": Object {
            "key": "f",
            "label": Object {
              "defaultMessage": "I fixed it!",
              "id": "KeyMapping.taskCompletion.fixed",
            },
          },
          "skip": Object {
            "key": "w",
            "label": Object {
              "defaultMessage": "Skip",
              "id": "KeyMapping.taskCompletion.skip",
            },
          },
          "tooHard": Object {
            "key": "d",
            "label": Object {
              "defaultMessage": "Too difficult / Couldn't see",
              "id": "KeyMapping.taskCompletion.tooHard",
            },
          },
        },
        "taskEditing": Object {
          "cancel": Object {
            "key": "Escape",
            "keyLabel": Object {
              "defaultMessage": "ESC",
              "id": "KeyMapping.taskEditing.escapeLabel",
            },
            "label": Object {
              "defaultMessage": "Cancel Editing",
              "id": "KeyMapping.taskEditing.cancel",
            },
          },
          "fitBounds": Object {
            "key": "0",
            "label": Object {
              "defaultMessage": "Fit Map to Task Features",
              "id": "KeyMapping.taskEditing.fitBounds",
            },
          },
        },
        "taskReview": Object {
          "nextTask": Object {
            "key": "l",
            "label": Object {
              "defaultMessage": "Next Task",
              "id": "KeyMapping.taskReview.nextTask",
            },
          },
          "prevTask": Object {
            "key": "h",
            "label": Object {
              "defaultMessage": "Previous Task",
              "id": "KeyMapping.taskReview.prevTask",
            },
          },
        },
      }
    }
    pickEditor={[MockFunction]}
    task={
      Object {
        "id": 123,
        "parent": Object {
          "id": 321,
        },
        "status": 0,
      }
    }
    textInputActive={[MockFunction]}
    user={
      Object {
        "id": 357,
        "isLoggedIn": true,
        "settings": Object {
          "defaultEditor": 1,
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="control-icon"
        >
          <SvgSymbol
            sym="edit-icon"
            viewBox="0 0 20 20"
          />
        </span>,
        <span
          className="control-label"
        >
          <FormattedMessage
            defaultMessage="Edit"
            id="Task.controls.edit.label"
            values={Object {}}
          />
        </span>,
      ],
      "className": "button edit-control large-and-wide full-width",
      "onClick": [Function],
      "title": "Edit",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "control-icon",
        "nodeType": "host",
        "props": Object {
          "children": <SvgSymbol
            sym="edit-icon"
            viewBox="0 0 20 20"
          />,
          "className": "control-icon",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "sym": "edit-icon",
            "viewBox": "0 0 20 20",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "span",
      },
      Object {
        "instance": null,
        "key": "control-label",
        "nodeType": "host",
        "props": Object {
          "children": <FormattedMessage
            defaultMessage="Edit"
            id="Task.controls.edit.label"
            values={Object {}}
          />,
          "className": "control-label",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "defaultMessage": "Edit",
            "id": "Task.controls.edit.label",
            "values": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "span",
      },
    ],
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="control-icon"
          >
            <SvgSymbol
              sym="edit-icon"
              viewBox="0 0 20 20"
            />
          </span>,
          <span
            className="control-label"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="Task.controls.edit.label"
              values={Object {}}
            />
          </span>,
        ],
        "className": "button edit-control large-and-wide full-width",
        "onClick": [Function],
        "title": "Edit",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "control-icon",
          "nodeType": "host",
          "props": Object {
            "children": <SvgSymbol
              sym="edit-icon"
              viewBox="0 0 20 20"
            />,
            "className": "control-icon",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "sym": "edit-icon",
              "viewBox": "0 0 20 20",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
        Object {
          "instance": null,
          "key": "control-label",
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Edit"
              id="Task.controls.edit.label"
              values={Object {}}
            />,
            "className": "control-label",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Edit",
              "id": "Task.controls.edit.label",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
      ],
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
